--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./dist",
     "module": "commonjs",
     "target": "es6",
     "esModuleInterop": true,
     "allowJs": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
     "strict": true,
   },
   "include": ["src"],
