--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.4.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^13.1.0",
     "typescript": "^4.9.4"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
