--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@swc/core": "^1.3.23",
+    "@swc/jest": "^0.2.24",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8.30.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -15,10 +18,13 @@
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.4.0",
     "husky": "^7.0.0",
+    "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   }
 }
