--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "module": "commonjs",
-    "target": "es6",
+    "module": "es2020",
+    "target": "es2020",
     "esModuleInterop": true,
     "allowJs": true,
     "baseUrl": ".",
     "strict": true,
+  },
+  "ts-node": {
+    "swc": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/node_modules/*"]
